# Beacons-project-HAN

./: .gitignore  04-02-2026, agreements.md  04-02-2026, plan of action.md  TODO and deadlines.md  list of hardware.md
3d models/oneshape files/: FRDM-MCXA153 casing - asembly.stl  FRDM-MCXA153 casing - body.stl  FRDM-MCXA153 casing - bottom clamp.stl  FRDM-MCXA153 casing - bottom.stl  FRDM-MCXA153 casing - middle clamp.stl  FRDM-MCXA153 casing - top clamp.stl  box exterior - bottom.stl  box exterior - top hole.stl  box exterior - top latch.stl  box exterior asembly.stl  box exterior wall 200mm.stl  gear step motor.stl  micro case - bottom.dxf  micro case - door 1.dxf  micro case - door 2.dxf  micro case - middle 5x.dxf  micro case - sliding clamp.dxf  micro case, top.dxf  tooth track step motor.stl
Components&Libraries/: Components.md  Libraries.md
Deadlines&Tasks/: TODO and deadlines.md
Meeting/: ESE_Project_Weekly_Meetings_ProcessReport_week_1_Bauke_Bergsma.md  Untitled.md
Notes/: Feedback from our plan action.md  Guidelines.md  Plan of Action.docx  Team-structure-document.docx  list of hardware.md
ProcessReport/: ESE_Project_Weekly_Meetings_ProcessReport.md  plan of action second project.docx  week1_ESE_Project_Weekly_Meetings_ProcessReport.md
Researchs/Random/: Researchs.md
armgcc-template/: .CMakeLists.txt.swp  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  build_all.bat  build_debug.bat  clean.bat  cmake_install.cmake  config.cmake  flags.cmake  mcux_config.h  mcuxsdk_version.h  output.map
armgcc-template/cmake/toolchain/: armgcc.cmake  mcux_config.cmake  toolchain.cmake
armgcc-template/devices/MCX/MCXA/MCXA153/: MCXA153_COMMON.h  fsl_device_registers.h  system_MCXA153.c
armgcc-template/devices/MCX/MCXA/MCXA153/gcc/: startup_MCXA153.S
armgcc-template/devices/MCX/MCXA/periph/: PERI_ADC.h  PERI_AOI.h  PERI_CDOG.h  PERI_CMC.h  PERI_CRC.h  PERI_GLIKEY.h  PERI_MRCC.h
code/esp32-stepper-no-lib/: stepper-no-lib.ino
code/esp32-stepper-test/: esp32-stepper-test.ino
code/frdm_mcxa153_blank/: CMakeLists.txt  led_blinky.c  mcux_include.json
docs/: Plan of Action.docx  Team-structure-document.docx  agreements-proto.txt  feedback_todo.md  plan-of-action.txt  what-is-it.txt
notes/: Notes.md  Software architecture.md  original-motor-logic.txt
notes/.obsidian/: workspace.json
research/: Component-research.md
